--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
       class="text-center bg-yellow-100 max-w-md mx-4 p-10 rounded-3xl shadow-lg border border-yellow-300">
       <h1
         class="text-3xl font-extrabold mb-8 text-yellow-800 drop-shadow-lg select-none">
-        🍰 Dessert Personality Quiz
+        🍰 Dessert Personality Quiz 🍰
       </h1>
       <a
         href="/quiz"
