--- a/quiz.html
+++ b/quiz.html
@@ -33,7 +33,7 @@
       class="max-w-xl w-full mx-auto space-y-10 bg-yellow-100 p-8 rounded-3xl shadow-lg border border-yellow-300">
       <h1
         class="text-4xl font-extrabold text-yellow-800 mb-6 text-center select-none">
-        🍰 Dessert Personality Quiz
+        🍰 Dessert Personality Quiz 🍰
       </h1>
 
       <div>
